--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>de.weltraumschaf</groupId>
     <artifactId>groundzero</artifactId>
-    <version>1.1.2-SNAPSHOT</version>
+    <version>1.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Ground Zero</name>
@@ -44,8 +44,8 @@
         <connection>scm:git:git://github.com/Weltraumschaf/GroundZero.git</connection>
         <developerConnection>scm:git:git@github.com:Weltraumschaf/GroundZero.git</developerConnection>
         <url>https://github.com/Weltraumschaf/GroundZero.git</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <distributionManagement>
         <site>
@@ -95,6 +95,11 @@
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.30</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.findbugs</groupId>
