--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>de.weltraumschaf</groupId>
     <artifactId>groundzero</artifactId>
-    <version>1.2.1</version>
+    <version>1.2.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Ground Zero</name>
@@ -44,7 +44,7 @@
         <connection>scm:git:git://github.com/Weltraumschaf/GroundZero.git</connection>
         <developerConnection>scm:git:git@github.com:Weltraumschaf/GroundZero.git</developerConnection>
         <url>https://github.com/Weltraumschaf/GroundZero.git</url>
-        <tag>1.2.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
