--- a/pom.xml
+++ b/pom.xml
@@ -91,9 +91,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>de.weltraumschaf</groupId>
-            <artifactId>commons</artifactId>
-            <version>0.4.0</version>
+            <groupId>de.weltraumschaf.commons</groupId>
+            <artifactId>application</artifactId>
+            <version>1.0.0-alpha</version>
+        </dependency>
+        <dependency>
+            <groupId>de.weltraumschaf.commons</groupId>
+            <artifactId>testing</artifactId>
+            <version>1.0.0-alpha</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
